--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,5 +1,5 @@
 :root > * {
-    --md-primary-fg-color:        #f69621;
+    --md-primary-fg-color:        #d47909;
     --md-primary-fg-color--light: #ECB7B7;
     --md-primary-fg-color--dark:  #90030C;
   }
